Bug#36289 - The record::active flag was not getting set to false when inserts or updates failed and an eception was caught.  Before releasing a newly created record, these 5 catch{} sections should set Table::active to false.